dnl AC_INIT([phyml],m4_esyscmd([sh -c "head -n 1 version | sed -e 's|M|V|g' | tr -d '\n'"]))
AC_INIT([phyml],m4_esyscmd([sh -c "head -n 1 version | sed -e 's|^|v3.0 (|g' | sed -e 's|$|)|g' | tr -d '\n'"]))
AC_CONFIG_AUX_DIR([.])
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
